--- a/src/presentation/pages/login/login-styles.scss
+++ b/src/presentation/pages/login/login-styles.scss
@@ -72,7 +72,7 @@ body {
       cursor: pointer;
 
       &:hover {
-        text-decoration: overline;
+        text-decoration: underline;
       }
     }
 
