--- a/src/presentation/styles/global.scss
+++ b/src/presentation/styles/global.scss
@@ -10,14 +10,8 @@
 }
 
 input[type="text"], input[type="password"], input[type="email"]{
-  border: 1px solid $primaryLight;
-  line-height: 40px;
-  border-radius: 10px;
-  padding: 0 40px 0 8px;
-
-  &:focus {
-    outline-color: $primaryLight;
-  }
+  border: none;
+  outline: none;
 }
 
 button {
@@ -26,7 +20,7 @@ button {
   border-radius: 10px;
   font-size: 16px;
   border: 0;
-  line-height: 60px;
+  line-height: 50px;
 
   &:hover {
     opacity: 0.9;
