--- a/src/presentation/pages/survey-result/survey-result-styles.scss
+++ b/src/presentation/pages/survey-result/survey-result-styles.scss
@@ -2,11 +2,11 @@
 @import "../../styles/animations.scss";
 
 .surveyResultWrap {
-  // display: flex;
-  // flex-direction: column;
-  // justify-content: space-between;
-  // min-height: 100vh;
-  // background-color: $background;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
+  background-color: $background;
 
   .contentWrap {
     display: flex;
