--- a/src/presentation/pages/survey-list/components/item/item-styles.scss
+++ b/src/presentation/pages/survey-list/components/item/item-styles.scss
@@ -1,11 +1,11 @@
 @import "../../../../styles/colors.scss";
 
-li {
+.surveyItemWrap {
   height: 250px;
   background-color: $white;
   display: flex;
-  justify-content: space-between;
   flex-direction: column;
+  justify-content: space-between;
   border-radius: 8px;
   flex-basis: 48%;
   margin-bottom: 24px;
@@ -13,7 +13,8 @@ li {
 
   .surveyContent {
     display: flex;
-    border-radius: 8px;
+    flex-direction: row;
+    border-radius: 8px 8px 0px 0px;
     justify-content: space-between;
     flex-grow: 1;
     background-repeat: no-repeat;
@@ -30,32 +31,9 @@ li {
       right: -10px;
     }
 
-    time {
-      display: flex;
-      flex-direction: column;
-      background-color: $primaryLight;
-      color: $white;
-      border-radius: 8px;
+    .calendarWrap {
       margin-left: 24px;
-      align-items: center;
       align-self: center;
-      width: 60px;
-      height: 100px;
-      flex-shrink: 0;
-
-      .day {
-        font-size: 40px;
-        font-weight: bold;
-      }
-
-      .month {
-        text-transform: lowercase;
-        margin: 0 0 8pxs;
-      }
-
-      .year {
-        font-size: 16px;
-      }
     }
 
     p {
@@ -64,19 +42,21 @@ li {
       align-self: center;
       flex-grow: 1;
     }
-
   }
 
   footer {
     background-color: $primary;
     cursor: pointer;
     border-radius: 0px 0px 8px 8px;
-    color: $white;
-    line-height: 40px;
-    text-transform: lowercase;
-    text-align: center;
-    display: block;
-    text-decoration: none;
+
+    a {
+      color: $white;
+      line-height: 40px;
+      text-transform: lowercase;
+      text-align: center;
+      display: block;
+      text-decoration: none;
+    }
 
     &:hover {
       background-color: $primaryDark;
@@ -85,9 +65,7 @@ li {
 }
 
 @media only screen and (max-width: 600px) {
-  .surveyListContainer {
-    li {
-        flex-basis: 100%;
-      }
-    }
+  .surveyItemWrap {
+    flex-basis: 100%;
+  }
 }
