--- a/src/presentation/components/form-status/form-status-styles.scss
+++ b/src/presentation/components/form-status/form-status-styles.scss
@@ -1,17 +1,16 @@
 @import "../../styles/colors.scss";
 
-
-.errorContainer {
+.errorWrap {
   display: flex;
   flex-direction: column;
   align-items: center;
 
-  .formStatus {
-    margin-top: 8px;
+  .spinner {
+    margin-top: 30px;
   }
 
-  .error{
-    margin-top: 8px;
+  .error {
+    margin-top: 30px;
     color: $primaryLight;
   }
 }
