--- a/src/presentation/components/input/input-styles.scss
+++ b/src/presentation/components/input/input-styles.scss
@@ -3,7 +3,7 @@
 .inputWrap {
   margin-top: 40px;
   position: relative;
-  border-bottom: 2px solid $disabledColor;
+  border-bottom: 2px dashed $disabledColor;
 
   &[data-status="valid"] {
     border-bottom-color: $valid;
