--- a/src/presentation/components/login-header/login-header-styles.scss
+++ b/src/presentation/components/login-header/login-header-styles.scss
@@ -1,24 +1,24 @@
 @import "../../styles/colors.scss";
 
-
-.header {
+.headerWrap {
   display: flex;
   flex-direction: column;
+  border-top: 40px solid $primaryDark;
   background-color: $primary;
   align-items: center;
 
-  img{
-    margin-top: 8px;
+  img {
+    margin-top: 40px;
   }
 
-  h1{
+  h1 {
     color: $white;
-    margin: 16px 0 16px;
+    margin: 16px 0px 40px;
   }
 }
 
 @media only screen and (max-width: 600px) {
-  .header {
+  .headerWrap {
     border-top-width: 20px;
   }
 }
