--- a/src/presentation/pages/login/login-styles.scss
+++ b/src/presentation/pages/login/login-styles.scss
@@ -1,20 +1,19 @@
 @import "../../styles/colors.scss";
 
-.loginContainer{
+.loginWrap {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
   justify-content: space-between;
 
-  form {
+  .form {
     display: flex;
     flex-direction: column;
-    max-width: 400px;
-    width: 100%;
+    width: 400px;
     background-color: $white;
     padding: 40px;
-    align-self: center;
     border-radius: 8px;
+    align-self: center;
     box-shadow: 0px 1px 3px -1px $black;
 
     h2 {
@@ -25,12 +24,13 @@
     }
 
     button {
-      margin-top: 16px;
+      margin-top: 32px;
     }
 
     .link {
       text-align: center;
       color: $primary;
+      text-transform: lowercase;
       margin-top: 16px;
       cursor: pointer;
 
@@ -38,6 +38,5 @@
         text-decoration: underline;
       }
     }
-
   }
 }
