--- a/src/presentation/pages/survey-list/survey-list-styles.scss
+++ b/src/presentation/pages/survey-list/survey-list-styles.scss
@@ -1,6 +1,6 @@
 @import "../../styles/colors.scss";
 
-.surveyListContainer {
+.surveyListWrap {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -25,4 +25,3 @@
     }
   }
 }
-
